Fix Code Smell
commit d2293bcb 
Author: Bruce <jtyself@amazon.com> 
Date: Tue Sep 26 2023 18:25:50 GMT-0500 (Central Daylight Time) 

    Fix code smell


commit 694f7d28 
Author: Bruce <jtyself@amazon.com> 
Date: Tue Sep 26 2023 17:30:56 GMT-0500 (Central Daylight Time) 

    Fix code smells


commit dfe05022 
Author: Bruce <jtyself@amazon.com> 
Date: Tue Sep 26 2023 16:56:20 GMT-0500 (Central Daylight Time) 

    remove unwanted setup


commit 1d9c0820 
Author: Bruce <jtyself@amazon.com> 
Date: Tue Sep 26 2023 16:41:54 GMT-0500 (Central Daylight Time) 

    Improve code quality